# Booking-Therapy

./: .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  wait_for_db.py
backend/booking/: urls.py
backend/booking/adapters/: product_adapter.py
backend/booking/api/: views.py
backend/bookings/: models.py  services.py  views.py
backend/bookings/infra/: payment_gateway.py
backend/bookings/templates/: reserva.html
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/locale/en/LC_MESSAGES/: django.mo  django.po
backend/locale/es/LC_MESSAGES/: django.mo  django.po
backend/src/agenda/: models.py  urls.py
backend/src/agenda/api/: serializers.py  views.py
backend/src/agenda/application/: selectors.py  services.py
backend/src/agenda/domain/: __init__.py  builders.py  entities.py  repositories.py
backend/src/agenda/infrastructure/: models.py  repositories.py
backend/src/agenda/migrations/: 0001_initial.py  0002_alter_appointment_status.py
backend/src/agenda/presentation/: serializers.py  urls.py  views.py
backend/src/auth_supabase/: __init__.py  apps.py  tasks.py  urls.py
backend/src/auth_supabase/api/: auth.py  serializers.py  views.py
backend/src/auth_supabase/application/: auth_service_factory.py  factories.py  services.py
backend/src/auth_supabase/domain/: entities.py  repositories.py
backend/src/auth_supabase/infrastructure/: auth_provider_factory.py  django_repositories.py  mappers.py  (+2 more)
backend/src/payments/: urls.py
(+134 files in other folders)
