[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "requests (>=2.0.0)",
    "psycopg[binary] (>=3.1)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=5.0.0)"
]

[tool.poetry]
# No packages defined here as apps are in src/ and managed via PYTHONPATH

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
